src/test/ui/missing/missing-comma-in-match.stderr
error: expected one of `,`, `.`, `?`, `}`, or an operator, found `=>`
  --> $DIR/missing-comma-in-match.rs:6:18
   |
LL |         &None => 1
   |                   - help: missing a comma here to end this `match` arm
LL |         &Some(2) => { 3 }
   |                  ^^ expected one of `,`, `.`, `?`, `}`, or an operator here

error: aborting due to previous error

